# AgentVault

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_STATUS.md  LICENSE  Makefile  QUICKSTART.md  README.md  alembic.ini  conftest.py  pyproject.toml  pytest.ini  requirements.txt  start-local.sh  stop-local.sh  test_mcp.py  test_server.py  test_strategies.py  test_strategy_manager.py  test_ui.py  tmp_dashboard.html  tmp_guard_bad.txt  tmp_tipjar.html  vaultpilot_policy.yml.sample  wallet_mcp_server.py
.github/workflows/: ci.yml  release.yml
contracts/: AgentVaultToken.sol
dashboard/: README.md  package-lock.json  package.json  tailwind.config.js
dashboard/backend/: main.py  main_integrated.py  requirements.txt
dashboard/public/: index.html  manifest.json
dashboard/src/: App.tsx  index.css  index.js
dashboard/src/components/: Layout.tsx  RecentActivity.tsx  StatsCard.tsx  TokenBalance.tsx  UsageChart.tsx
dashboard/src/config/: web3.ts
dashboard/src/pages/: Agents.tsx  Airdrop.tsx  Billing.tsx  Dashboard.tsx  Settings.tsx  Strategies.tsx  Usage.tsx  Wallet.tsx
dashboard/src/utils/: api.ts
docs/: RELEASE.md  architecture.md  cli.md  dashboard.md  mcp-compliance.md  mcp-integration-examples.md  prompt-pack.md  security-audit.md  token-economics.md  user-onboarding.md  vaultpilot_prd.md
examples/: orchestrator.py
scripts/: build.sh  tag_version.sh  upload_pypi.sh  upload_testpypi.sh
src/agentvault_mcp/: __init__.py  admin_api.py  cli.py  config.py  core.py  defi.py  guardrail.py  network_config.py  policy.py  server.py  strategies.py  strategy_manager.py  tipjar.py  ui.py  wallet.py
src/agentvault_mcp/adapters/: ollama_adapter.py  openai_adapter.py  web3_adapter.py
src/agentvault_mcp/db/: __init__.py  cli.py  engine.py  import_legacy.py  models.py  repositories.py
src/agentvault_mcp/db/migrations/: env.py  script.py.mako
src/agentvault_mcp/db/migrations/versions/: 0001_initial.py  0002_multi_tenant.py
tests/: test_guardrail.py  test_policy.py  test_strategies.py  test_ui.py  test_wallet_extended.py
