[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvault-mcp"
version = "0.1.0"
description = "AgentVault MCP: Secure context + wallet tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
dependencies = [
  "pydantic==2.5.0",
  "tiktoken==0.6.0",
  "openai==1.20.0",
  "web3==6.15.0",
  "eth-account==0.10.0",
  "cryptography==42.0.5",
  "structlog==23.2.0",
  "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.23.7",
  "httpx==0.25.2",
  "mcp>=0.1.0",
]

[project.scripts]
agentvault-mcp = "agentvault_mcp.server:cli"
agentvault = "agentvault_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
