[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvault-mcp"
version = "0.1.1"
description = "AgentVault MCP: Secure context + wallet tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "veritas axis studio", email = "studio.ve.axis@gmail.com"}]
license = {text = "MIT"}
keywords = ["mcp", "model context protocol", "web3", "ethereum", "wallet", "agent", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet",
]
dependencies = [
  "pydantic>=2.8,<3",
  "openai==1.20.0",
  "web3==6.15.0",
  "eth-account==0.10.0",
  "cryptography==42.0.5",
  "structlog==23.2.0",
  "python-dotenv==1.0.0",
  "segno==1.5.3",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.23.7",
  "httpx==0.25.2",
  "mcp>=0.1.0",
]
release = [
  "build>=1.0.0",
  "twine>=5.0.0",
]

[project.scripts]
agentvault-mcp = "agentvault_mcp.server:cli"
agentvault = "agentvault_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
